--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ spiceypy = ">=6.0.0"
 xarray = '>=2023.0.0'
 pyyaml = "^6.0.1"
 numpy = "^1.26.4"
+lmfit = '>=1.3.2'
 
 # Optional dependencies
 numpydoc = {version="^1.5.0", optional=true}
