--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ space_packet_parser = ">=4.2.0"
 spiceypy = ">=6.0.0"
 xarray = '>=2023.0.0'
 pyyaml = "^6.0.1"
-numpy = "^1.26.4"
+numpy = "<=3"
 
 # Optional dependencies
 numpydoc = {version="^1.5.0", optional=true}
