--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ pytest-cov = {version="^4.0.0", optional=true}
 ruff = {version="==0.2.1", optional=true}
 sphinx = {version="*", optional=true}
 sphinxcontrib-openapi = {version="^0.8.3", optional=true}
-mypy = {version="^1.10.1", optional=true}
+mypy = {version="1.10.1", optional=true}
 
 [tool.poetry.extras]
 dev = ["pre-commit", "ruff", "mypy"]
