--- a/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
@@ -25,94 +25,83 @@ codice_support_attrs: &support_default
     VAR_TYPE: support_data
 
 # <=== Coordinates ===>
-energy_attrs:
+esa_step:
     <<: *default
     CATDESC: Energy per charge (E/q) sweeping step
-    FIELDNAM: Energy step
+    FIELDNAM: Energy Index
     FORMAT: I3
-    LABLAXIS: energy step
+    LABLAXIS: Energy Index
+    SI_CONVERSION: " > "
     UNITS: ' '
     VALIDMIN: 0
-    VALIDMAX: 127
+    VALIDMAX: 128
     VAR_TYPE: support_data
 
-inst_az_attrs:
+inst_az:
     <<: *default
-    CATDESC: Azimuth
-    FIELDNAM: Azimuth
+    CATDESC: Azimuth Index
+    FIELDNAM: Azimuth Index
     FORMAT: I2
-    LABLAXIS: Azimuth
-    UNITS: ' '
+    LABLAXIS: " "
+    SI_CONVERSION: " > "
+    UNITS: " "
     VALIDMIN: 0
     VALIDMAX: 31
     VAR_TYPE: support_data
 
-spin_sector_attrs:
+spin_sector:
     <<: *default
     CATDESC: Spin sector indicating range of spin angles
-    FIELDNAM: Spin sector
+    FIELDNAM: Spin Sector Index
     FORMAT: I2
-    LABLAXIS: spin sector
-    UNITS: ' '
+    LABLAXIS: " "
+    SI_CONVERSION: " > "
+    UNITS: " "
     VALIDMIN: 0
-    VALIDMAX: 11
+    VALIDMAX: 12
     VAR_TYPE: support_data
 
-# <=== Labels ===>
-energy_label:
-    CATDESC: Energy per charge (E/q) sweeping step
-    DISPLAY_TYPE: ""
-    FIELDNAM: Energy step
-    FILLVAL: ""
-    FORMAT: A3
-    LABLAXIS: ""
-    REFERENCE_POSITION: ""
-    RESOLUTION: ""
-    TIME_BASE: ""
-    TIME_SCALE: ""
-    UNITS: ""
-    VALIDMAX: ""
-    VALIDMIN: ""
-    VAR_TYPE: metadata
-
-# <=== Dataset Attributes ===>
-acquisition_times_attrs:
+# <=== Dataset Variable Attributes ===>
+# The following are set in multiple data products
+acquisition_time_per_step:
     <<: *default
-    CATDESC: Time of acquisition for the energy step
-    DEPEND_1: energy
+    CATDESC: Acquisition time for each step of energy
     FIELDNAM: Acquisition Time
-    FILLVAL: .NAN
+    FILLVAL: -1.0e+30
     FORMAT: F10.3
-    LABLAXIS: Acq Time
+    LABLAXIS: " "
+    SI_CONVERSION: " > "
     UNITS: ms
-    VALIDMIN: 0
-    VALIDMAX: 1000
+    VALIDMIN: 0.000000
+    VALIDMAX: 625.000000
     VAR_TYPE: support_data
 
 counters_attrs: &counters
     <<: *default
     CATDESC: Fill in at creation
     DEPEND_0: epoch
-    DEPEND_1: energy
+    DEPEND_1: esa_step
     DISPLAY_TYPE: time_series
     FIELDNAM: Fill in at creation
-    LABL_PTR_1: energy_label
     UNITS: counts
     VALIDMIN: 0
     VALIDMAX: 8388607  # max value for a signed 24-bit integer
 
-esa_sweep_attrs:
+energy_table:
     <<: *default
     CATDESC: ElectroStatic Analyzer Energy Values
-    DEPEND_1: energy
+    DEPEND_1: esa_step
     FIELDNAM: ESA Voltage
-    FORMAT: I19
+    FORMAT: I5
     LABLAXIS: ESA V
-    UNITS: V
-    VALIDMIN: 0
+    SCALETYP: log
+    SI_CONVERSION: " > "
+    UNITS: eV
+    VALIDMIN: 1
+    VALIDMAX: 14100
     VAR_TYPE: support_data
 
-# <=== Data Variable Attributes ===>
+# The following are data product-specific
 # hi-counters-aggregated
 hi_counters_aggregated-aggregated:
     <<: *counters
