--- a/imap_processing/cdf/config/imap_swapi_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_swapi_variable_attrs.yaml
@@ -32,7 +32,10 @@ counts_default: &counts_default
   VAR_TYPE: data
   SCALETYP: linear
 
-compression_default: &compression_default
+flags_default:
+  CATDESC: Bitwise flag. There are 13 flags. See VAR_NOTES for more details.
+  FIELDNAM: Quality Flag
+  LABLAXIS: Flags
   DEPEND_0: epoch
   DEPEND_1: energy
   DISPLAY_TYPE: spectrogram
@@ -41,9 +44,17 @@ compression_default: &compression_default
   FORMAT: I1
   UNITS: ' '
   VALIDMIN: 0
-  VALIDMAX: 1
+  VALIDMAX: 32767
   VAR_TYPE: data
   SCALETYP: linear
+  VAR_NOTES: >
+    There are 13 flags in total, first three flags are from science packets
+    and remaining 10 flags are from housekeeping packets. Flags are stored
+    as bitwise flag. 32767 is the value when all 15-bits are 1s. Eg.
+    int('0111111111111111', 2). First two bits from right are saved to save defaults.
+    Then, the remaining 13 bits from right are used for 13 flags. The flags are
+    as follows, "OVR_T_ST", "UND_T_ST", "PCEM_CNT_ST", "SCEM_CNT_ST","PCEM_V_ST",
+    "PCEM_I_ST", "PCEM_INT_ST", "SCEM_V_ST", "SCEM_I_ST", "SCEM_INT_ST".
 
 uncertainty_default: &uncertainty_default
   DEPEND_0: epoch
@@ -88,24 +99,6 @@ coin_counts:
   CATDESC: Coincidence Counts
   FIELDNAM: Coincidence CEM Counts
   LABLAXIS: coin_cnts
-
-pcem_flags:
-  <<: *compression_default
-  CATDESC: Primary Channel Electron Multiplier (CEM) compression flag
-  FIELDNAM: Primary CEM Flag
-  LABLAXIS: pcem_flag
-
-scem_flags:
-  <<: *compression_default
-  CATDESC: Secondary Channel Electron Multiplier (CEM) compression flag
-  FIELDNAM: Secondary CEM Flag
-  LABLAXIS: scem_flag
-
-coin_flags:
-  <<: *compression_default
-  CATDESC: Coincidence compression flag
-  FIELDNAM: Coincidence Flag
-  LABLAXIS: coin_flag
 
 pcem_uncertainty:
   <<: *uncertainty_default
