Add downloader for de440s.bsp kernel Ignore all flavors of the de440 SPK Add external_kernel pytest marker for tests that require kernels to download from NAIF Parameterize the use_test_metekernel deocorator to enable using alternate metakernel templates Add metekernel template that includes de440s.bsp

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,7 @@ cython_debug/
 
 # Data that is downloaded
 data/
+
+# Ignore specific SPICE kernels that get downloaded from NAIF automatically for tests
+# marked with @pytest.mark.external_kernel
+**/de440*.bsp
