--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,11 +52,12 @@ ruff = {version="==0.2.1", optional=true}
 sphinx = {version="*", optional=true}
 sphinxcontrib-openapi = {version="^0.8.3", optional=true}
 mypy = {version="^1.10.1", optional=true}
+requests = {version = "^2.32.3", optional = true}
 
 [tool.poetry.extras]
 dev = ["pre-commit", "ruff", "mypy"]
 doc = ["numpydoc", "pydata-sphinx-theme", "sphinx", "sphinxcontrib-openapi"]
-test = ["openpyxl", "pytest", "pytest-cov"]
+test = ["openpyxl", "pytest", "pytest-cov", "requests"]
 tools= ["openpyxl", "pandas"]
 
 [project.urls]
