--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,11 @@ jobs:
           RUN_EXTERNAL_KERNEL_MARK: ${{ contains(matrix.os, 'ubuntu') && matrix.python-version == '3.9' }}
         run: |
           # Ignore the network marks from the remote test environment
-          poetry run pytest --color=yes --cov --cov-report=xml ${!RUN_EXTERNAL_KERNEL_MARK:+"-m not external_kernel"}
+          if [ "$RUN_EXTERNAL_KERNEL_MARK" = "true" ]; then
+            poetry run pytest --color=yes --cov --cov-report=xml
+          else
+            poetry run pytest --color=yes --cov --cov-report=xml -m "not external_kernel"
+          fi
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
