--- a/imap_processing/cdf/config/imap_swapi_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_swapi_global_cdf_attrs.yaml
@@ -14,7 +14,7 @@ imap_swapi_l1_sci:
   <<: *instrument_base
   # NOTE: Right now, this Data_level is required to produce valid CDF
   Data_level: "1"
-  Data_type: L1_SCI>Level-1 Science data in 1 minute resolution
+  Data_type: L1_SCI>Level-1 Science data
   Logical_source: imap_swapi_l1_sci
   Logical_source_description: SWAPI Instrument Level-1 Science Data
 
@@ -28,6 +28,6 @@ imap_swapi_l1_hk:
 imap_swapi_l2_sci:
   <<: *instrument_base
   Data_level: "2"
-  Data_type: L2_SCI>Level-2 Science data in 1 minute resolution
+  Data_type: L2_SCI>Level-2 Science data
   Logical_source: imap_swapi_l2_sci
-  Logical_source_description: SWAPI Instrument Level-1 Science Data in 1 minute resolution
+  Logical_source_description: SWAPI Instrument Level-1 Science Data
