--- a/imap_processing/cdf/config/imap_lo_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_lo_l1a_variable_attrs.yaml
@@ -1,56 +1,42 @@
 default_attrs: &default
   # Assumed values for all variable attrs unless overwritten
   DISPLAY_TYPE: time_series
-  DEPEND_0: epoch
   FILLVAL: -9223372036854775808
   FORMAT: I12
   VALIDMIN: 0
   VALIDMAX: 9223372036854775807
-  VAR_TYPE: data
   UNITS: ' '
+
+coord_default_attrs: &coord_default
+  <<: *default
+  VAR_TYPE: support_data
 
 de_default_attrs: &de_default
-  DISPLAY_TYPE: time_series
-  FILLVAL: -9223372036854775808
-  FORMAT: I12
-  VALIDMIN: 0
-  VALIDMAX: 9223372036854775807
+  <<: *default
   VAR_TYPE: support_data
   DEPEND_1: direct_events
-  UNITS: ' '
+
+hist_az_60_default: &hist_az_60_default
+  <<: *default
+  VAR_TYPE: data
+  DEPEND_0: epoch
+  DEPEND_1: azimuth_60
+  DEPEND_2: esa_step
+
+hist_az_6_default: &hist_az_6_default
+  <<: *default
+  VAR_TYPE: data
+  DEPEND_0: epoch
+  DEPEND_1: azimuth_6
+  DEPEND_2: esa_step
+
+spin_default_attrs: &spin_default
+  <<: *default
+  VAR_TYPE: support_data
+  DEPEND_1: spin
+
 
 # Re-used Coordinate
-esa_step_label:
-   CATDESC: ESA Steps
-   FIELDNAM: ESA Steps
-   FORMAT: A1
-   VAR_TYPE: metadata
-
-esa_step:
-  VALIDMIN: 1
-  VALIDMAX: 7
-  FILLVAL: 255
-  CATDESC: Energy Step
-  DEPEND_1: esa_step
-  FIELDNAM: Energy Step
-  UNITS: ' '
-  FORMAT: I3
-  VAR_TYPE: support_data
-  LABLAXIS: ESA
-  LABL_PTR_1: esa_step_label
-
-shcoarse:
-  VALIDMIN: 0
-  VALIDMAX: 9223372036854775807
-  FILLVAL: -9223372036854775808
-  CATDESC: Mission Elapsed Time
-  DEPEND_0: epoch
-  FIELDNAM: Spacecraft Time
-  Units: ' '
-  FORMAT: I12
-  VAR_TYPE: support_data
-  LABLAXIS: SHCOARSE
-
 epoch:
   VALIDMIN: 0
   VALIDMAX: 9223372036854775807
@@ -63,15 +49,41 @@ epoch:
   VAR_TYPE: support_data
   LABLAXIS: Epoch
 
+esa_step_label:
+   CATDESC: ESA Steps
+   FIELDNAM: ESA Steps
+   FORMAT: A1
+   VAR_TYPE: metadata
+
+esa_step:
+  <<: *coord_default
+  VALIDMIN: 1
+  VALIDMAX: 7
+  FILLVAL: 255
+  CATDESC: Energy Step
+  DEPEND_1: esa_step
+  FIELDNAM: Energy Step
+  FORMAT: I3
+  LABLAXIS: ESA
+  LABL_PTR_1: esa_step_label
+
+shcoarse:
+  <<: *default
+  CATDESC: Mission Elapsed Time
+  DEPEND_0: epoch
+  FIELDNAM: Spacecraft Time
+  Units: 'ns'
+  LABLAXIS: SHCOARSE
+
 # Direct Events Attributes
+## Coordinates
 direct_events:
   <<: *de_default
-  FORMAT: I12
-  DEPEND_1: direct_events
   CATDESC: Index of number of direct events for pointing
   FIELDNAM: direct_events
   LABLAXIS: DE
 
+## Fields
 de_time:
   <<: *de_default
   VALIDMAX: 4096
@@ -91,7 +103,6 @@ mode:
 
 tof0:
   <<: *de_default
-  VALIDMIN: 0
   VALIDMAX: 4096
   CATDESC: Time of Flight
   FIELDNAM: Time of Flight 2
@@ -100,7 +111,6 @@ tof0:
 
 tof1:
   <<: *de_default
-  VALIDMIN: 0
   VALIDMAX: 4096
   CATDESC: Time of Flight
   FIELDNAM: Time of Flight 1
@@ -109,7 +119,6 @@ tof1:
 
 tof2:
   <<: *de_default
-  VALIDMIN: 0
   VALIDMAX: 4096
   CATDESC: Time of Flight
   FIELDNAM: Time of Flight 2
@@ -118,7 +127,6 @@ tof2:
 
 tof3:
   <<: *de_default
-  VALIDMIN: 0
   VALIDMAX: 4096
   CATDESC: Time of Flight
   FIELDNAM: Time of Flight 3
@@ -127,7 +135,6 @@ tof3:
 
 cksm:
   <<: *de_default
-  VALIDMIN: 0
   VALIDMAX: 15
   CATDESC: checksum TBD
   FIELDNAM: Checksum
@@ -136,7 +143,6 @@ cksm:
 
 pos:
   <<: *de_default
-  VALIDMIN: 0
   VALIDMAX: 4
   CATDESC: Stop position
   FIELDNAM: Stop Position
@@ -145,7 +151,6 @@ pos:
 
 coincidence_type:
   <<: *de_default
-  VALIDMIN: 0
   VALIDMAX: 15
   CATDESC: Direct Event Coincidence Type
   FIELDNAM: Coincidence Type
@@ -154,17 +159,15 @@ coincidence_type:
 
 de_count:
   <<: *default
-  VALIDMIN: 0
   VALIDMAX: 32767
   DEPEND_0: epoch
   CATDESC: Direct Event Counts
   FIELDNAM: Direct Event Count
   FORMAT: I5
-  VAR_TYPE: support_data
   LABLAXIS: Direct Event Count
+# Direct Events Attributes - END
 
 # Histogram Attributes
-
 ## Coordinates
 azimuth_6_label:
   CATDESC: azimuth spin bins (<num packets>, 6 degrees)
@@ -173,15 +176,13 @@ azimuth_6_label:
   VAR_TYPE: metadata
 
 azimuth_6:
-  VALIDMIN: 0
+  <<: *coord_default
   VALIDMAX: 59
   FILLVAL: 255
   CATDESC: azimuth spin bins (<num packets>, 6 degrees)
   FIELDNAM: Azimuth bins
   DEPEND_1: azimuth_6
-  UNITS: ' '
   FORMAT: I3
-  VAR_TYPE: support_data
   LABLAXIS: Az bins
   LABL_PTR_1: azimuth_6_label
 
@@ -192,283 +193,183 @@ azimuth_60_label:
   VAR_TYPE: metadata
 
 azimuth_60:
-  VALIDMIN: 0
+  <<: *coord_default
   VALIDMAX: 5
   FILLVAL: 255
   CATDESC: azimuth spin bins (<num packets>, 60 degrees)
   FIELDNAM: Azimuth bins
   DEPEND_1: azimuth_60
   FORMAT: I3
-  UNITS: ' '
-  VAR_TYPE: support_data
   LABLAXIS: Az bins
   LABL_PTR_1: azimuth_60_label
 
 ## Fields
 start_a:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Anode A Singles count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Anode A Singles Count
-  FORMAT: I12
   LABLAXIS: anode A singles counts
 
 start_c:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Anode C Singles count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Anode C Singles count
-  FORMAT: I12
   LABLAXIS: anode c singles count
 
 stop_b0:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Ion B0 Singles count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Ion B0 Singles count
-  FORMAT: I12
   LABLAXIS: ion B0 singles count
 
 stop_b3:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Ion B3 Singles count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Ion B3 Singles count
-  FORMAT: I12
   LABLAXIS: ion B3 singles count
 
 tof0_count:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Time of Flight 0 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Time of Flight 0 count
-  FORMAT: I12
   LABLAXIS: ToF 0 count
 
 tof1_count:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Time of Flight 1 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Time of Flight 1 count
-  FORMAT: I12
   LABLAXIS: ToF 1 count
 
 tof2_count:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Time of Flight 2 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Time of Flight 2 count
-  FORMAT: 12
   LABLAXIS: ToF 2 count
 
 tof3_count:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Time of Flight 3 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Time of Flight 3 count
-  FORMAT: I12
   LABLAXIS: ToF 3 count
 
 tof0_tof1:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_6_default
   catdesc: Triple Coincidence 0/1 count
-  DEPEND_1: azimuth_6
-  DEPEND_2: esa_step
   FIELDNAM: Triple Coincidence 0/1 count
-  FORMAT: I12
   LABLAXIS: triple coincidence 0/1 count
 
 tof0_tof2:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_6_default
   CATDESC: Triple Coincidence 0/2 count
-  DEPEND_1: azimuth_6
-  DEPEND_2: esa_step
   FIELDNAM: Triple Coincidence 0/2 count
-  FORMAT: I12
   LABLAXIS: triple coincidence 0/2 count
 
 tof1_tof2:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_6_default
   catdesc: Triple Coincidence 1/2 count
-  DEPEND_1: azimuth_6
-  DEPEND_2: esa_step
   FIELDNAM: Triple Coincidence 1/2 count
-  FORMAT: I12
   LABLAXIS: triple 1/2 coincidence count
 
 silver:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_6_default
   CATDESC: Triple Coincidence silver count
-  DEPEND_1: azimuth_6
-  DEPEND_2: esa_step
   FIELDNAM: Triple Coincidence silver count
-  FORMAT: I12
   LABLAXIS: triple coincidence silver count
 
 disc_tof0:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Discarded Time of Flight 0 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Discarded Time of Flight 0 count
-  FORMAT: I12
   LABLAXIS: discarded ToF 0 count
 
 disc_tof1:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Discarded Time of Flight 1 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Discarded Time of Flight 1 count
-  FORMAT: I12
   LABLAXIS: discarded ToF 1 count
 
 disc_tof2:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Discarded Time of Flight 2 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Discarded Time of Flight 2 count
-  FORMAT: I12
   LABLAXIS: discarded ToF 2 count
 
 disc_tof3:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Discarded Time of Flight 3 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Discarded Time of Flight 3 count
-  FORMAT: I12
   LABLAXIS: discarded ToF 3 count
 
 pos0:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Position 0 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Position 0 count
-  FORMAT: I12
   LABLAXIS: position 0 count
 
 pos1:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Position 1 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Position 1 count
-  FORMAT: I12
   LABLAXIS: position 1 count
 
 pos2:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Position 2 count
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Position 2 count
-  FORMAT: I12
   LABLAXIS: position 2 count
 
 pos3:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_60_default
   CATDESC: Position 3 count
-  DEPEND_0: epoch
-  DEPEND_1: azimuth_60
-  DEPEND_2: esa_step
   FIELDNAM: Position 3 count
-  FORMAT: I12
   LABLAXIS: position 3 count
 
 hydrogen:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_6_default
   CATDESC: Hydrogen count
-  DEPEND_1: azimuth_6
-  DEPEND_2: esa_step
   FIELDNAM: Hydrogen count
-  FORMAT: I12
   LABLAXIS: hydrogen count
 
 oxygen:
-  <<: *default
-  VALIDMIN: 0
+  <<: *hist_az_6_default
   CATDESC: Oxygen count
-  DEPEND_1: azimuth_6
-  DEPEND_2: esa_step
   FIELDNAM: Oxygen count
-  FORMAT: I12
   LABLAXIS: oxygen count
+# Histogram Attributes - END
 
 # Star Sensor Attributes
-
 ## Coordinates
 star_sample:
-  <<: *default
-  VALIDMIN: 0
+  <<: *coord_default
   VALIDMAX: 719
   CATDESC: indices of star sensor samples for pointing
   FIELDNAM: Star Sensor Sample Indices in Pointing
-  FORMAT: I12
-  VAR_TYPE: support_data
 
 ## Fields
 star_sensor:
   <<: *default
-  VALIDMIN: 0
   CATDESC: Star Sensor FIFO Data
-  DEPEND_0: star_samples
-  DISPLAY_TYPE: time_series
-  FIELDNAM: Star Sensor FIFO Data
-  FORMAT: I12
+  DEPEND_1: star_sample
   VAR_TYPE: support_data
+  FIELDNAM: Star Sensor FIFO Data
   LABLAXIS: star sensor FIFO data
 
 count:
   <<: *default
-  VALIDMIN: 0
   CATDESC: Number of star sensor samples in packet
   FIELDNAM: Number of star sensor samples
-  FORMAT: I12
+  DEPEND_0: epoch
   VAR_TYPE: support_data
   LABLAXIS: Number of star sensor samples
+# Star Sensor Attributes - END
 
 # Spin Attributes
-
 ## Spin Coordinates
 spin:
   <<: *default
-  VALIDMIN: 0
   CATDESC: Spin numbers in pointing
   FIELDNAM: Spin numbers
   DEPEND_1: spin
-  FORMAT: I12
   VAR_TYPE: support_data
   LABLAXIS: spin numbers
 
@@ -476,91 +377,62 @@ spin:
 ## Spin Fields
 num_completed:
   <<: *default
-  VALIDMIN: 0
   DEPEND_0: epoch
+  VAR_TYPE: support_data
   CATDESC: Number of spins completed
   FIELDNAM: Number of spins completed
-  FORMAT: I12
   LABLAXIS: number of spins completed
 
 acq_end:
   <<: *default
-  VALIDMIN: 0
   DEPEND_0: epoch
+  VAR_TYPE: support_data
   CATDESC: Acquisition End
   FIELDNAM: Acquisition End
-  FORMAT: I12
   UNITS: ns
   LABLAXIS: acquisition end
 
 spin_seconds:
-  <<: *default
-  VALIDMIN: 0
+  <<: *spin_default
   CATDESC: Spin Start Seconds Time
-  DEPEND_1: spin
   FIELDNAM: Spin Start Seconds Time
-  FORMAT: I12
-  VAR_TYPE: support_data
   UNITS: ns
   LABLAXIS: spin start seconds time
 
 spin_subseconds:
-  <<: *default
-  VALIDMIN: 0
+  <<: *spin_default
   CATDESC: Spin Start Sub-Seconds Time
-  DEPEND_1: spin
   FIELDNAM: Spin Start Sub-Seconds Time
-  FORMAT: I12
-  VAR_TYPE: support_data
   LABLAXIS: spin start sub-seconds time
 
 esa_p_dac:
-  <<: *default
-  VALIDMIN: 0
+  <<: *spin_default
   CATDESC: Positive ESA Set Point
-  DEPEND_1: spin
   FIELDNAM: Positive ESA Set Point
-  FORMAT: I12
-  VAR_TYPE: support_data
   LABLAXIS: Positive ESA Set Point
 
 esa_n_dac:
-  <<: *default
-  VALIDMIN: 0
+  <<: *spin_default
   CATDESC: Negative ESA Set Point
-  DEPEND_1: spin
   FIELDNAM: Negative ESA Set Point
-  FORMAT: I12
-  VAR_TYPE: support_data
   LABLAXIS: Negative ESA Set Point
 
 val_period:
-  <<: *default
-  VALIDMIN: 0
+  <<: *spin_default
   CATDESC: Valid Spin Period
-  DEPEND_1: spin
   FIELDNAM: Valid Spin Period
-  FORMAT: I12
-  VAR_TYPE: support_data
   LABLAXIS: valid spin period
 
 val_spin:
-  <<: *default
-  VALIDMIN: 0
+  <<: *spin_default
   CATDESC: Valid Spin Phase
-  DEPEND_1: spin
-  DISPLAY_TYPE: time_series
   FIELDNAM: Valid Spin Phase
-  FORMAT: I12
-  VAR_TYPE: support_data
   LABLAXIS: valid spin phase
 
 source:
   <<: *default
-  VALIDMIN: 0
   CATDESC: Spin Period Source
   DEPEND_1: spin
   FIELDNAM: Spin Period Source
-  FORMAT: I12
-  VAR_TYPE: support_data
   LABLAXIS: spin period source
+# Spin Attributes - END
